<resources>
    <string name="app_name">Weather Forcast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="today">Today</string>
    <string name="sevenDays">7 Days</string>
    <string name="location">Location</string>
    <string name="alarm">Alarm</string>
    <string name="api_key">AIzaSyA7dH75J8SZ0-GkeHqHANbflPhdpbfU5yI</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="language">Language</string>
    <string name="units">Units</string>
    <string name="textNoData">Please check your internet connection and GPS or add a city to see the weather</string>
    <string name="feelsLike">"Feels like: "</string>
    <string name="wind">"Wind: "</string>
    <string name="humidity">"Humidity: "</string>
    <string name="clouds">"Clouds: "</string>
    <string name="alertType">Alert Type</string>
    <string name="temp_more">Temperature more than</string>
    <string name="temp_less">Temperature less than</string>
    <string name="deleteAlarm">Are you sure you want to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteLocation">Are you sure you want to delete this location from your favorites  list?</string>
    <string name="snow">Snow</string>
    <string name="weather_alarm">Alarm type </string>
    <string name="sunrise">Sunrise :</string>
    <string name="sunset">Sunset :</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add <widget></widget></string>
    <string name="locationCityNotFound">Can\'t access your local location</string>
    <string name="m_s">m/s</string>
    <string name="m_h">mile/h</string>
    <string name="c">C°</string>
    <string name="f">F°</string>
    <string name="k">K°</string>
</resources>