<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/today"
        android:icon="@drawable/ic_forecast__1_"
        android:menuCategory="secondary"
        android:title="@string/today" />

    <item
        android:id="@+id/location"
        android:icon="@drawable/ic_location"
        android:menuCategory="secondary"
        android:title="@string/location" />
    <item
        android:id="@+id/settings2"
        android:icon="@drawable/ic_baseline_settings_24"
        android:menuCategory="secondary"
        android:title="@string/settings" />

    <item
        android:id="@+id/alarmf"
        android:icon="@drawable/ic_baseline_alarm_24"
        android:menuCategory="secondary"
        android:title="@string/alarm" />

</menu>