<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/dailyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgSunrise2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtDayTemp"
                    app:layout_constraintStart_toEndOf="@+id/txtDayTemp"
                    app:layout_constraintTop_toTopOf="@+id/txtDayTemp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:srcCompat="@drawable/temp_up_icon" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgSunrise3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtNightTemp"
                    app:layout_constraintStart_toEndOf="@+id/txtDayTemp"
                    app:layout_constraintTop_toTopOf="@+id/txtNightTemp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:srcCompat="@drawable/temp_down_icon" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/imgLottie"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.727"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.47"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

                <TextView
                    android:id="@+id/txtNightTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtDayTemp"
                    app:layout_constraintTop_toBottomOf="@+id/txtDayTemp"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/txtDayTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="36dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/txtDayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtDayTemp"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/txtDailyDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="@+id/txtDayName"
                    app:layout_constraintTop_toTopOf="@+id/txtNightTemp"
                    tools:text="TextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80FFFFFF"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:layout_constraintVertical_bias="0.0"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/txtWind2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/wind"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="@+id/textSunset"
                    app:layout_constraintTop_toBottomOf="@+id/txtSunset" />

                <TextView
                    android:id="@+id/txtClouds2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/clouds"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtHumidty2"
                    app:layout_constraintTop_toBottomOf="@+id/txtHumidty"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/txtHumidty2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/humidity"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="@+id/txtWind2"
                    app:layout_constraintTop_toBottomOf="@+id/txtWind" />

                <TextView
                    android:id="@+id/txtWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="@+id/txtSunset"
                    app:layout_constraintTop_toBottomOf="@+id/txtSunset"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/txtHumidty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="@+id/txtWind"
                    app:layout_constraintTop_toBottomOf="@+id/txtWind"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/txtSunRise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/txtSunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="@+id/txtSunRise"
                    app:layout_constraintTop_toBottomOf="@+id/txtSunRise"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/txtClouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtHumidty"
                    app:layout_constraintTop_toBottomOf="@+id/txtHumidty"
                    app:layout_constraintVertical_bias="1.0"
                    tools:text="TextView" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/imgLottieHumidity"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtHumidty"
                    app:layout_constraintEnd_toEndOf="@+id/imgSunrise"
                    app:layout_constraintStart_toStartOf="@+id/imgSunrise"
                    app:layout_constraintTop_toTopOf="@+id/txtHumidty"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgSunrise"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSunRise"
                    app:layout_constraintStart_toEndOf="@+id/txtSunRise"
                    app:layout_constraintTop_toTopOf="@+id/txtSunRise"
                    app:layout_constraintVertical_bias="1.0"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:srcCompat="@drawable/sunrise" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgSunset"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSunset"
                    app:layout_constraintEnd_toEndOf="@+id/imgSunrise"
                    app:layout_constraintStart_toStartOf="@+id/imgSunrise"
                    app:layout_constraintTop_toTopOf="@+id/txtSunset"
                    app:layout_constraintVertical_bias="0.0"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:srcCompat="@drawable/sunset" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/imgLottieClouds"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtClouds"
                    app:layout_constraintEnd_toEndOf="@+id/imgSunrise"
                    app:layout_constraintTop_toTopOf="@+id/txtClouds"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgWind"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtWind"
                    app:layout_constraintEnd_toEndOf="@+id/imgSunrise"
                    app:layout_constraintTop_toTopOf="@+id/txtWind"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:srcCompat="@drawable/wind_icon_daily" />

                <TextView
                    android:id="@+id/textSunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/sunrise"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSunRise"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtSunRise" />

                <TextView
                    android:id="@+id/textSunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/sunset"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSunset"
                    app:layout_constraintStart_toStartOf="@+id/textSunrise"
                    app:layout_constraintTop_toTopOf="@+id/txtSunset" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="%"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="@+id/txtClouds"
                    app:layout_constraintStart_toEndOf="@+id/txtClouds"
                    app:layout_constraintTop_toTopOf="@+id/txtClouds" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="@+id/txtHumidty"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/txtHumidty" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>